<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.password_manager.ui.home.passwordFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_password" />

    <fragment
        android:id="@+id/nav_Wifi"
        android:name="com.example.password_manager.ui.gallery.wifiFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_wifi" />

    <fragment
        android:id="@+id/nav_social"
        android:name="com.example.password_manager.ui.slideshow.socialFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_social" />
</navigation>